compiler/testData/diagnostics/tests/secondaryConstructors/constructorInObject.kt
object A {
    <!SECONDARY_CONSTRUCTOR_IN_OBJECT!>constructor() {}<!>
    constructor {}
}
